--- a/you-sannim/package.json
+++ b/you-sannim/package.json
@@ -1,7 +1,7 @@
 {
   "name": "you-sannim",
   "version": "0.1.0",
-  "homepage": "https://izzara-ura.github.io/you-sannim",
+  "homepage": "https://izzara-ura.github.io/YOU_SANNIM",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
